update: 样式修改，提取公共组件至common

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root"></div>
+    <div id="root" style="height: 100%"></div>
     <script src="assets/lib.umd.min.js"></script>
     <script src="assets/antd.icons.min.js"></script>
 </body>
