--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
-    <script src="assets/lib.umd.min.js"></script>
-    <script src="assets/antd.icons.min.js"></script>
+    <script src="/assets/lib.umd.min.js"></script>
+    <script src="/assets/antd.icons.min.js"></script>
 </body>
 </html>
