--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="%PUBLIC_URL%/static/lib.umd.min.js?v=1.0.0"></script>
+    <script src="%PUBLIC_URL%/static/antd.icons.min.js?v=1.0.0"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
